# pydata-global-exploration

./: .dockerignore  CLAUDE.md  Dockerfile.api  Dockerfile.ui  README.md  main.py  models.py  pyproject.toml  ui.py
.github/workflows/: deploy.yml
routers/: meetups.py  organisers.py
static/: index.html
tests/: test_health.py
