[project]
name = "pydata-global-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "hypothesis>=6.152.4",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
